# ajax-cobranded-hass

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.dev  Makefile  README.md  hacs.json  pyproject.toml  vulture_whitelist.py
.github/workflows/: ci.yml  release.yml
custom_components/ajax_cobranded/: __init__.py  alarm_control_panel.py  binary_sensor.py  button.py  camera.py  config_flow.py  const.py  coordinator.py  diagnostics.py  event.py  icons.json  light.py  manifest.json  notification.py  photo_storage.py  sensor.py  services.yaml  strings.json  switch.py
custom_components/ajax_cobranded/api/: __init__.py  client.py  devices.py  hub_object.py  media.py  models.py  security.py  session.py  spaces.py
custom_components/ajax_cobranded/translations/: ca.json  cs.json  de.json  es.json  fr.json  it.json  nl.json  pl.json  pt-BR.json  pt.json  ro.json  tr.json  uk.json
docs/: TODO-improvements.md
docs/superpowers/plans/: 2026-04-11-ajax-protegim-hass.md  2026-04-13-p1-features.md
scripts/: compile_protos.sh  test_connection.py  test_photo_flow.py
tests/: conftest.py
tests/e2e/: test_real_connection.py
tests/unit/: test_alarm_control_panel.py  test_binary_sensor.py  test_camera.py  test_client.py  test_config_flow.py  test_coordinator.py  test_devices.py  test_diagnostics.py  test_event.py  test_hub_object.py  test_init.py  test_light.py  test_models.py  test_notification.py  test_photo_storage.py  test_security.py  test_sensor.py  test_services.py  test_session.py  test_spaces.py  test_switch.py
(+1759 files in other folders)
